--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
             <!-- Movie Images Grid -->
             <div class="movie-grid">
                 <div class="movie-item">
-                    <img src="C:\Users\HP\Pictures\ava.jpg" alt="Avatar 2">
+                    <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSYWVMx6h59vKIGkku5l3hPkBbqsErDsCB7-QZ9zaKuhTN8edvL" alt="Avatar 2">
                     <p>Avatar 2</p>
                 </div>
                 <div class="movie-item">
-                    <img src="C:\Users\HP\Pictures\bat.jpg" alt="The Batman">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUOpwFVoR5xgrQX0AqB__TnzrmPtDbk9l30LJt78ih0wvfo-CW" alt="The Batman">
                     <p>The Batman</p>
                 </div>
                 <div class="movie-item">
-                    <img src="C:\Users\HP\Pictures\sp.jpg" alt="Spider-Man: No Way Home">
+                    <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSPY55pmIm_vOwLw9bHsWyN6VajY377Fub-9QUVhKIzb08RxUoH" alt="Spider-Man: No Way Home">
                     <p>Spider-Man: No Way Home</p>
                 </div>
                 <div class="movie-item">
-                    <img src="C:\Users\HP\Pictures\j.jpg" alt="Jurassic World: Dominion">
+                    <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRAhiD1zplxxzrmecY1L6PnNP_xTRO-kTW1ufH54wsKXLy_lWlO" alt="Jurassic World: Dominion">
                     <p>Jurassic World: Dominion</p>
                 </div>
                 <div class="movie-item">
-                    <img src="C:\Users\HP\Pictures\t.jpg" alt="Top Gun: Maverick">
+                    <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTb0I81g39NGDx0sKP5F_DECCsdzoOwh9MVUD0PLSVvQpf3rpIM" alt="Top Gun: Maverick">
                     <p>Top Gun: Maverick</p>
                 </div>
             </div>
@@ -175,4 +175,3 @@
 
    <!-- Closing HTML Tag -->
    </html>
-
